# cpp-executable-template

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  SECURITY.md  STRUCTURE.md  codecov.yml  conanfile.py
.github/workflows/: ci.yml
cmake/: CheckCoverageThreshold.cmake  CheckPragmaOnce.cmake  CodeCoverage.cmake  ConanSetup.cmake  LintTargets.cmake  Sanitizers.cmake
docs/: BUILD.md  CI.md  CI_CACHING.md  CODECOV.md  LINTING.md  TESTING.md
include/my_project_name/: greeting.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_main.cpp
